Remove unused methods in TaskListView and minor code style fixes based on @solth's review.